--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>AngularCertificationProject</title>
-  <base href="/">
+  <base href="https://MttEsposito.github.io/ng-cert-stocks.io/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>@charset "UTF-8";html{overflow:auto}body{margin:0;padding:0;background-color:#cccccc8e}</style><link rel="stylesheet" href="styles.c1bf97778d84b84f.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.c1bf97778d84b84f.css"></noscript></head>
